src/test/deca/context/invalid/pierre/objects/incompClassCast.deca
class A {}
class B extends A {}
class C {}
{
    A a = new A();
    C c = (C)(a);
}
